# WhatsApp-APIs

./: pyproject.toml
chat/: consumers.py  models.py  serializers.py  services.py  urls.py  views.py
chat/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py
