[tool.poetry]
name = "whatsapp-apis"
version = "0.1.0"
description = ""
authors = ["Michkail <55208634+Michkail@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "whatsapp_apis"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
